Hide flame on mobile (fixed #124)

--- a/static/compressed/global.css
+++ b/static/compressed/global.css
@@ -43,4 +43,4 @@ article iframe{max-width:100% !important}
 header{border-bottom:1px solid #333;margin-bottom:20px}
 .object-list{list-style:none}.object-list li{padding:0;line-height:2em}
 .gallery{display:inline;cursor:pointer}.gallery img{margin-bottom:20px}
-@media (max-width:820px){body{margin:0 0 100px} section{width:auto;max-width:600px} footer{line-height:1.5em} footer .tel,footer .email{display:block} footer .adr:after,footer .tel:after{content:''}}@media (max-width:550px){nav{position:static;height:auto;text-align:center;border-bottom:1px solid #333} footer{left:0;background-color:#010101;box-shadow:inset 0 12px 12px -6px #000} nav ul{margin-bottom:0} .brand{position:relative;top:20px}.brand img{width:105px;height:116px;margin-left:-57px} section{margin-top:0} section,footer,nav ul{padding:20px;width:auto}}
+@media (max-width:820px){body{margin:0 0 100px} section{width:auto;max-width:600px} footer{line-height:1.5em} footer .tel,footer .email{display:block} footer .adr:after,footer .tel:after{content:''}}@media (max-width:550px){nav{position:static;height:auto;text-align:center;border-bottom:1px solid #333} footer{left:0;background-color:#010101;box-shadow:inset 0 12px 12px -6px #000} nav ul{margin-bottom:0} .brand{position:relative;top:20px}.brand img{display:none} section{margin-top:0} section,footer,nav ul{padding:20px;width:auto}}
