--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -282,14 +282,9 @@ header {
     position: relative;
     top: 20px;
 
-    // Scale the logo to be 3/4 the size to
-    // bring the content to the forefront
+    // Hide the flame image
     img {
-      width: 105px;
-      height: 116px;
-
-      // Center the logo
-      margin-left: -57px;
+      display: none;
     }
   }
 
